<resources>
    <string name="app_name">IM</string>
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="global_group">群组</string>
    <string name="dicussion_group">讨论组</string>
    <string name="global_chat_record">聊天记录</string>
    <string name="hint_search_chat_record">Hi，请输入您要搜索的聊天记录</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="hint_search_contact_name">Hi，请输入您要搜索的联系人名称</string>
    <string name="global_invite_more_people">邀请更多人</string>
    <string name="global_contact">联系人</string>
    <string name="global_unread">未读</string>
    <string name="global_scan">扫码</string>
    <string name="global_search">搜索</string>
    <string name="global_start_chat">发起聊天</string>
    <string name="global_creat_group_chat">创建群聊</string>
    <string name="global_add_friend">添加好友</string>
    <string name="global_find_group">查找群组</string>
    <string name="global_chat_more">更多</string>
    <string name="global_read">已读</string>
    <string name="global_clear">清空</string>
    <string name="global_stick">置顶</string>
    <string name="global_silence">屏蔽</string>
    <string name="global_detail">聊天</string>
    <string name="global_report">举报</string>
    <string name="global_delete">删除</string>
    <string name="global_qr_code">二维码</string>
    <string name="global_file">文件</string>
    <string name="global_dynamic">动态</string>
    <string name="global_setting">设置</string>
    <string name="mine_my_account">我的账户</string>
    <string name="mine_theme">主色调</string>
    <string name="mine_my_about">关于</string>
    <string name="mine_login_back">返回登录</string>
    <string name="mine_account">账户</string>
    <string name="global_finish">完成</string>
    <string name="mine_personage">个人信息</string>
    <string name="mine_avatar">头像</string>
    <string name="mine_name">名称</string>
    <string name="mine_regist_phone">注册电话</string>
    <string name="global_about">关于</string>
    <string name="mine_clause">使用条款</string>
    <string name="mine_version">版本信息</string>
    <string name="contact_new_friend">新朋友</string>
    <string name="contact_group_chat">群聊</string>
    <string name="global_top_talk">置顶该聊天</string>
    <string name="global_delete_talk">删除该聊天</string>
    <string name="global_notop_talk">取消置顶</string>
    <string name="isout_login">是否返回登陆界面</string>
    <string name="hint_search">ID号/手机号</string>
    <string name="contactlist_null">"您还未添加任何好友，快去添加吧！"</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!--最近会话-->
    <string name="location">[位置]</string>
    <string name="draft">[草稿]</string>
    <string name="picture">[图片]</string>
    <string name="voice">[语音]</string>
    <string name="sticker">[贴图]</string>
    <string name="video">[视频]</string>
</resources>
