<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/lly_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/llay_one"
        android:orientation="horizontal">

        <TextView
            android:id="@id/tv_scan"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:layout_marginLeft="@dimen/dp_40"
            android:drawableTop="@drawable/ic_scan"
            android:gravity="center_horizontal"
            android:text="@string/global_scan"/>

        <TextView
            android:id="@id/tv_search"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:drawableTop="@drawable/ic_search"
            android:gravity="center_horizontal"
            android:text="@string/global_search"/>

        <TextView
            android:id="@id/tv_start_chat"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:layout_marginRight="@dimen/dp_40"
            android:drawableTop="@drawable/ic_start_chat"
            android:gravity="center_horizontal"
            android:text="@string/global_start_chat"/>

    </LinearLayout>

    <LinearLayout
        android:id="@id/llay_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/iv_back"
        android:layout_marginBottom="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_19"
        android:orientation="horizontal">

        <TextView
            android:id="@id/tv_unread"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:drawableTop="@drawable/ic_unread"
            android:gravity="center_horizontal"
            android:text="@string/global_unread"/>

        <TextView
            android:id="@id/tv_read"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:drawableTop="@drawable/ic_read"
            android:gravity="center_horizontal"
            android:text="@string/global_read"/>

        <TextView
            android:id="@id/tv_clear"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_9"
            android:layout_marginRight="@dimen/dp_40"
            android:drawableTop="@drawable/ic_clear"
            android:gravity="center_horizontal"
            android:text="@string/global_clear"/>

    </LinearLayout>

    <ImageView
        android:id="@id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:padding="@dimen/dp_15"
        android:src="@drawable/ic_back_black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>