<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_top_dialog"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/global_top_talk"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tv_no_top_dialog"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/global_notop_talk"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/gray_81" />

        <TextView
            android:id="@+id/tv_delete_dialog"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/global_delete_talk"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12" />

    </LinearLayout>

</android.support.v7.widget.CardView>