<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_20"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/mine_account"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"/>

        <TextView
            android:id="@id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/global_finish"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>
    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/mine_personage"
        android:textColor="#42ffffff"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/white_10"/>

    <RelativeLayout
        android:id="@id/rly_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:id="@id/tv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mine_avatar"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>

        <ImageView
            android:id="@id/iv_avatar"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/avatar_bg"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/white_10"/>

    <LinearLayout
        android:id="@id/lly_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_40"
            android:gravity="right|center_vertical"
            android:text="圈子龙"
            android:textColor="@color/white_8a"
            android:textSize="@dimen/font_15"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/white_10"/>

    <LinearLayout
        android:id="@id/lly_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_regist_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:gravity="right"
            android:text="13510235689"
            android:textColor="@color/white_8a"
            android:textSize="@dimen/font_15"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/white_10"/>
</LinearLayout>