<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg_chat"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bg_chat"
        android:orientation="vertical">

        <TextView
            android:id="@id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_26"
            android:singleLine="true"
            android:text="程姐"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_6"
            android:text="女"
            android:textColor="@color/white_8a"
            android:textSize="@dimen/font_11"/>

        <TextView
            android:id="@id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:text="皮肤好才是真的好，我吐。我吐。。"
            android:textColor="@color/white_8a"
            android:textSize="@dimen/font_11"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_44">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/circlr_bg_big"/>

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:background="@drawable/circlr_bg_center"/>

            <ImageView
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_gravity="center"
                android:background="@drawable/circlr_bg_small"/>

            <com.silver.chat.view.CircleImageView
                android:id="@id/iv_avatar"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:src="@drawable/system_head"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:orientation="horizontal">

            <TextView
                android:id="@id/tv_stick"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_scan"
                android:gravity="center_horizontal"
                android:text="@string/global_stick"/>

            <TextView
                android:id="@id/tv_silence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_search"
                android:gravity="center_horizontal"
                android:text="@string/global_silence"/>

            <TextView
                android:id="@id/tv_clear"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_start_chat"
                android:gravity="center_horizontal"
                android:text="@string/global_clear"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_9"
            android:orientation="horizontal">

            <TextView
                android:id="@id/tv_detail"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_scan"
                android:gravity="center_horizontal"
                android:text="@string/global_detail"/>

            <TextView
                android:id="@id/tv_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_search"
                android:gravity="center_horizontal"
                android:text="@string/global_report"/>

            <TextView
                android:id="@id/tv_delete"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_9"
                android:drawableTop="@drawable/ic_start_chat"
                android:gravity="center_horizontal"
                android:text="@string/global_delete"/>

        </LinearLayout>

        <ImageView
            android:id="@id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="@dimen/dp_17"
            android:padding="@dimen/dp_15"
            android:src="@drawable/ic_back_white"/>
    </LinearLayout>
</ScrollView>